test/libsolidity/syntaxTests/parsing/single_modifier_arg_trailing_comma.sol
contract test {
	modifier modTest(uint a,) { _; }
	function(uint a) {}
}
// ----
// ParserError: (40-41): Unexpected trailing comma in parameter list.
